[project]
name = "ipaopt"
version = "0.1.0"
description = "Optimize IPA asset catalogs by stripping unused idioms, scales, appearances, and CPU architectures."
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
ipaopt = "ipaopt.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ipaopt*"]
